# async-seo-analysis-master

./: .gitignore  CONTRIBUTING.md  DOCKERFILE  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
async_seo_analyzer/: __init__.py  __main__.py  analyzer.py  crawler.py  page_analysis.py  pyproject.toml  stopwords.py  utils.py
async_seo_analyzer/async_seo_analyzer/: __main__.py
crawler_updated_09_19_2023-main/: .gitignore
crawler_updated_09_19_2023-main/copy_script/: copy_script.py
crawler_updated_09_19_2023-main/crawler/: crawler.py  crawler_with_functions.py  crawler_with_functionsv2.py
crawler_updated_09_19_2023-main/crawler/rel_to_abs_url/: rel_to_abs_url-Copy1.py
crawler_updated_09_19_2023-main/crawler/retry/: retry.py
crawler_updated_09_19_2023-main/formatter/: v12_formatter-Copy.py  v12_formatter.py  v13_formatter.py  v14_formatter.py  v15_formatter.py
crawler_updated_09_19_2023-main/formatter/core/: clean_html.py  content_hash.py  page_elements.py  page_warnings.py  process_xml_tags.py  slug.py
crawler_updated_09_19_2023-main/formatter/process_text/: process_text.py  stemmer.py
crawler_updated_09_19_2023-main/new_formatter/: formatter.py
crawler_updated_09_19_2023-main/new_formatter/clean_html/: clean_html.py  format_text.py
crawler_updated_09_19_2023-main/new_formatter/content_hash/: content_hash.py
crawler_updated_09_19_2023-main/structures/: __init__.py  page.py  task.py
tests/: test_analyzer_smoke.py  test_page_analysis.py
